Finished server application. All routes, generated by swagger,  have been tested
